--- a/module_vip/src/main/res/layout/dialog_share_device.xml
+++ b/module_vip/src/main/res/layout/dialog_share_device.xml
@@ -12,6 +12,7 @@
         android:layout_height="25dp"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="36dp"
+        android:layout_marginTop="28dp"
         android:layout_marginRight="36dp"
         android:drawableBottom="@drawable/yellow_line_l"
         android:gravity="center"
@@ -19,9 +20,7 @@
         android:text="@string/dialog_title_share_device"
         android:textColor="@color/black_333333"
         android:textColorHint="@color/gray_979797"
-        android:textSize="16dp"
-        android:layout_marginTop="28dp"
-        />
+        android:textSize="16dp" />
 
     <EditText
         android:id="@+id/etPhone"
